CHANGE: Fixed overflow y for mobile devices.

--- a/style.css
+++ b/style.css
@@ -155,6 +155,11 @@ button {
 }
 
 @media screen and (max-width: 1000px) {
+
+	body {
+		overflow-y: visible;
+	}
+
 	.введение {
 		flex: 1;
 	}
@@ -163,6 +168,10 @@ button {
 @media only screen 
 and (min-device-width : 768px) 
 and (max-device-width : 1024px)  { 
+	body {
+		overflow-y: visible;
+	}
+
 	.вступление-текст{
 		font-size: 14px;
 	}
@@ -174,6 +183,11 @@ and (max-device-width : 1024px)  {
 }
 
 @media screen and (max-width: 750px) {
+
+	body {
+		overflow-y: visible;
+	}
+
 	h1 {
 		font-size: 32px;
 	}
